<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/lone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/trainNo"
            android:textSize="23sp"
            android:text="@string/train1"
            android:gravity="center" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_below="@+id/lone">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="160dp"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearSession1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/trainStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/departTime" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:id="@+id/linearSession2"
            android:layout_toEndOf="@+id/linearSession1"
            android:layout_toRightOf="@+id/linearSession1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:id="@+id/trainS" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/linearSession2"
            android:layout_toEndOf="@+id/linearSession2"
            android:id="@+id/linearSession3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/dest" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/arr" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:id="@+id/expect"
                android:text="@string/expect"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:id="@+id/linearSession4"
            android:layout_toEndOf="@+id/linearSession3"
            android:layout_toRightOf="@+id/linearSession3">

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textSize="12sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/destination"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:id="@+id/arrivalTime"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expectTime"
                android:textSize="12sp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="bottom"
                android:textStyle="italic|bold" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lFinal"
        android:layout_below="@+id/content">
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/myLocation"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:inputType="textCapWords"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trainCurrent"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:id="@+id/tcl" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trainLocation"
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <fragment
        android:id="@+id/googleMap"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@+id/lFinal"
        android:layout_alignParentBottom="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Search"
        android:id="@+id/bNavigation"
        android:layout_gravity="end"
        android:layout_alignBottom="@+id/lFinal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="navigate"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/ll"
        android:layout_below="@+id/content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/traintemp"
        android:layout_gravity="right"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tempArrivalTime"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tempExpectTime"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tloc"
        android:layout_alignBottom="@+id/bNavigation"
        android:layout_alignRight="@+id/ll"
        android:layout_alignEnd="@+id/ll"
        android:visibility="invisible" />

</RelativeLayout>